# MiniValgrind

./: CMakeLists.txt  LICENSE  Makefile  MiniC.lex  MiniC.y  README.md  lang.cpp  lang.lex  lang.y  lexer.cpp  parser.cpp  parser.hpp  test.txt  test2.txt
Src/: Exceptions.h  Operators.cpp  Operators.h  Statements.cpp  Statements.h  Types.h  Variable.cpp  Variable.h  Visitor.h  lang.cpp.backup
Tests/: MemoryTest.py  RunTests.py  UnitTest.py  bad_test1.txt  bad_test10.txt  bad_test11.txt  bad_test12.txt  bad_test2.txt  bad_test3.txt  bad_test4.txt  bad_test5.txt  bad_test6.txt  bad_test7.txt  bad_test8.txt  bad_test9.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test3.txt  test4.txt  test5.txt  test6.txt  (+3 more)
